bullets instead of -
&#8226; !!!

Also companies links now target _blank

--- a/Assets/Style.css
+++ b/Assets/Style.css
@@ -171,6 +171,10 @@ article.work-exp:before {
     background: var(--tag-background);
 }
 
+.skill-tag.active { 
+    background: #787878;
+}
+
 
 .skill-tag.junior {
     border-left: solid 4px #9c27b0;
